kit-eleves-TP2-DevSecOps/kit-eleves/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: # ??? nom du namespace (voir consignes)
  labels:
    app: taskmanager
    # ??? ajoutez un label indiquant l'environnement (ex: env: ...)
