kit-eleves-TP2-DevSecOps/kit-eleves/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager
  namespace: # ???
  annotations:
    # ??? Quelle annotation permet de réécrire l'URL cible avec nginx-ingress ?
    # Consultez la doc : https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
spec:
  ingressClassName: # ??? nom de la classe Ingress utilisée par minikube
  rules:
    - host: # ??? hostname défini dans les consignes
      http:
        paths:
          - path: /
            pathType: # ??? Prefix ou Exact ?
            backend:
              service:
                name: # ??? nom du Service de l'application
                port:
                  number: # ???
